# whatsapp-inbox

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ACCES_DIAGNOSTICS.md  ACCES_DIRECT_BACKEND.md  ACTION_IMMEDIATE.md  AMELIORATIONS_UX_LOGO_DECONNEXION.md  ANALYSE_ERREURS_5XX.md  CHANGELOG_IMAGE_FIX.md  CHANGELOG_MOBILE_PWA.md  CONTRIBUTING.md  DEBUG_500_ERRORS.md  DEBUG_MEDIA_STORAGE.md  DEBUG_MOBILE_IMAGES_MESSAGES.md  DEMARRAGE_RAPIDE.md  DEPLOYMENT.md  DIAGNOSTIC_ENDPOINTS.md  DIAGNOSTIC_MESSAGES_MANQUANTS.md  DIAGNOSTIC_SANS_SSH.md  DIAGNOSTIC_STOCKAGE_MEDIAS.md  FIX_BUG_CACHE_BOT_MODE.md  FIX_FINAL_MOBILE_UX.md  FIX_IMAGE_DISPLAY_FINAL.md  FIX_MEDIA_DISPLAY.md  FIX_MEDIA_DOWNLOAD_ERROR.md  FIX_MOBILE_IMAGE_UPLOAD.md  FIX_MOBILE_IMAGE_UPLOAD_404.md  FORMAT_PHONE_NUMBERS.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  GEMINI_PROMPT_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_MESSAGES_GUIDE.md  INTERFACE_WHATSAPP_GUIDE.md  LICENSE  MIME_TYPE_FIX.md  Makefile  NOTIFICATIONS.md  OPTIMISATIONS_MOBILE_PWA.md  OPTIMISATION_SEND_MESSAGE.md  PERFORMANCE_OPTIMIZATIONS.md  (+34 more)
backend/: .env.example  DATABASE_OPTIMIZATION.md  DIAGNOSTIC_RESULTS.md  Dockerfile  GUIDE_IMPLEMENTATION.md  GUIDE_NGROK.md  OPTIMISATIONS_SUPPLEMENTAIRES.md  README_FIXES.md  SOLUTIONS_IMPLEMENTEES.md  WEBHOOK_LOGS_GUIDE.md  _pt_out2.txt  locustfile.py  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/docs/: playground_flow_reference.json
backend/scripts/: activate_webhooks.py  apply_fixes.sh  auto_find_backend.py  backfill_media_storage.py  check_webhook_logs.py  (+34 more)
(+482 files in other folders)
